2003-05-06  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm: Release V1.45 to Starlink

2003-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm: Forgot to export dat_put0i 

2003-03-07  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.xs: dat_cell had a return value that was marked for input.

2001-03-21  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm: Increase version number since we have improved fits IO

2000-08-11  Tim Jenness  <timj@jach.hawaii.edu>

	* t/fitshdr.t: Create to test fits header stuff

	* NDF.pm (fits_extract_key_val): Do the fits header stuff properly
	after reading the FITS standard !

2000-07-12  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm: Remove @EXPORT. Add msg_tune and err_tune 

	* t/msg.t: Improve test suite
	
	* t/err.t: Improve test suite
	
	* NDF.xs: Use PREINIT blocks and include missing Starlink include
	files. Add msg_tune and err_tune.
	Begin changing some routines to use the C wrappers

2000-05-19  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm (calls): Only use a single arg to constant

2000-04-17  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.xs: Change constant() routine to only have a single argument

	* NDF.pm (AUTOLOAD): Fix autloader so that it only asks for the
	constant name without delving deeper into @_

2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>

	* getarg.c: Replace na with PL_na

2000-01-25  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm: Check for defined value for $value from
	fits_get_nth_item to fix -w warning.

	--- RELEASE V1.41 to Starlink ---
	
1999-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Makefile.PL: Use Starlink::Config

1999-04-21  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.pm (fits_extract_key_val): Return null rather than undef

1998-10-15  Tim Jenness  <timj@jach.hawaii.edu>

	* PDL/NDF.pm: Check for array extensions and skip them.

1998-10-13  Tim Jenness  <timj@jach.hawaii.edu>

	* NDF.xs: Finally realise that bad pixel values are defined in